<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_name" />

        <TextView
            android:id="@+id/list_item_name"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_count" />

        <TextView
            android:id="@+id/list_item_quantity"
            style="@style/list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/list_item_add"
            style="@style/list_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            />

        <Button
            android:id="@+id/list_item_sub"
            style="@style/list_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub" />
    </LinearLayout>


</LinearLayout>