<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_layout"
    style="@style/item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/item_text"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/material_id" />

        <TextView
            style="@style/item_text"
            android:id="@+id/material_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%654654654" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_name" />

        <TextView
            style="@style/item_text"
            android:id="@+id/material_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%654654654" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_count" />

        <TextView
            style="@style/item_text"
            android:id="@+id/material_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%654654654" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_stock" />

        <TextView
            style="@style/item_text"
            android:id="@+id/safe_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%654654654" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proportion" />

        <TextView
            style="@style/item_text"
            android:id="@+id/proportion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%654654654" />
    </LinearLayout>

    <TextView
        style="@style/item_text"
        android:id="@+id/get_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        />
</LinearLayout>